feat:validate for repeated user_name(could change with phone)
