# docs/swagger.json
@@ -34,6 +34,22 @@
                 }
             }
         },
+        "/admin/userlist": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Find all users",
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/git/login": {
             "get": {
                 "tags": [
@@ -180,22 +196,6 @@
                         "in": "formData"
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "code\",\"message\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/userlist": {
-            "get": {
-                "tags": [
-                    "UserModule"
-                ],
-                "summary": "Find all user",
                 "responses": {
                     "200": {
                         "description": "code\",\"message\"}",
